dist_man1_MANS=

if BUILD_worldwidewebD
  dist_man1_MANS+=worldwidewebd.1
endif

if ENABLE_QT
  dist_man1_MANS+=worldwideweb-qt.1
endif

if BUILD_worldwideweb_CLI
  dist_man1_MANS+=worldwideweb-cli.1
endif

if BUILD_worldwideweb_TX
  dist_man1_MANS+=worldwideweb-tx.1
endif

if BUILD_worldwideweb_UTIL
  dist_man1_MANS+=worldwideweb-util.1
endif

if ENABLE_WALLET
if BUILD_worldwideweb_WALLET
  dist_man1_MANS+=worldwideweb-wallet.1
endif
endif
